--- a/web/css/site.css
+++ b/web/css/site.css
@@ -107,6 +107,13 @@ a.desc:after {
   height: 100%;
 }
 
+.bg-image-thank-you {
+  background-image: url("/images/thank-you.jpg");
+  width: 100%;
+  background-size: cover;
+  height: 100%;
+}
+
 .bg-gradient {
   width: 100%;
   height: 100%;
